another attempt to fix mobile overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,8 +36,11 @@ html {
 
 body{
 	color: $black;
-	overflow-x: hidden !important;
 	overflow-y: visible;
+}
+
+.container{
+	overflow-x: hidden !important;
 }
 
 h1, h2, h3{
